fixed screen size bug on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -554,10 +554,6 @@ html, body {
     background-color: #77777771;
 }
 
-.footer {
-    height: 10%;
-}
-
 .clock {
     display: flex;
     flex-direction: column;
@@ -1188,9 +1184,10 @@ html, body {
 
 .footer {
     display: flex;
-    justify-content: end;
-    align-items: end;
-    height: 25px;
+    justify-content: center;
+    align-items: start;
+    width: 100%;
+    height: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 9px;
     color: #ffffff70;
